--- a/manual/dependencyinjection.html
+++ b/manual/dependencyinjection.html
@@ -241,7 +241,7 @@
     <a class="nav-link" href="../log4j-spring-cloud-config-client.html">Log4j Spring Cloud Configuration</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="../log4j-jul.html">Log4j JDK Logging Adapter</a>
+    <a class="nav-link" href="../log4j-jul.html">JUL-to-Log4j bridge</a>
   </li>
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="../log4j-to-jul.html">Log4j to JUL Adapter</a>
