Add website content generated from `17024c7c0796f3c9c4c1335c91815cfb2c92a070`

--- a/release-notes.html
+++ b/release-notes.html
@@ -525,6 +525,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>org.eclipse.platform:org.eclipse.osgi</code> to version <code>3.21.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2940">2940</a>)</p>
 </li>
 <li>
+<p>Update <code>org.junit:junit-bom</code> to version <code>5.11.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3111">3111</a>)</p>
+</li>
+<li>
 <p>Update <code>org.mongodb:bson</code> to version <code>5.2.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3015">3015</a>)</p>
 </li>
 <li>
