--- a/release-notes.html
+++ b/release-notes.html
@@ -412,6 +412,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <li>
 <p>Change the whitespace prefixing logic in Pattern Layout (<a href="https://github.com/apache/logging-log4j2/pull/3045">3045</a>)</p>
 </li>
+<li>
+<p>Changes the layout used by the <a href="https://logging.apache.org/log4j/2.x/manual/configuration.html#automatic-configuration">default configuration</a>. (<a href="https://github.com/apache/logging-log4j2/pull/3118">3118</a>)</p>
+</li>
 </ul>
 </div>
 </div>
