--- a/release-notes.html
+++ b/release-notes.html
@@ -447,7 +447,7 @@
 <p>Update <code>io.netty:netty-bom</code> to version <code>4.1.112.Final</code> (<a href="https://github.com/apache/logging-log4j2/pull/2763">2763</a>)</p>
 </li>
 <li>
-<p>Update <code>net.bytebuddy:byte-buddy</code> to version <code>1.15.5</code> (<a href="https://github.com/apache/logging-log4j2/pull/3103">3103</a>)</p>
+<p>Update <code>net.bytebuddy:byte-buddy</code> to version <code>1.15.7</code> (<a href="https://github.com/apache/logging-log4j2/pull/3116">3116</a>)</p>
 </li>
 <li>
 <p>Update <code>net.java.dev.jna:jna</code> to version <code>5.15.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2957">2957</a>)</p>
@@ -531,7 +531,10 @@
 <p>Update <code>org.jspecify:jspecify</code> to version <code>1.0.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2750">2750</a>)</p>
 </li>
 <li>
-<p>Update <code>org.junit:junit-bom</code> to version <code>5.10.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/2694">2694</a>)</p>
+<p>Update <code>org.junit:junit-bom</code> to version <code>5.11.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3113">3113</a>)</p>
+</li>
+<li>
+<p>Update <code>org.junit-pioneer:junit-pioneer</code> to version <code>2.3.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3063">3063</a>)</p>
 </li>
 <li>
 <p>Update <code>org.mockito:mockito-bom</code> to version <code>5.14.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3096">3096</a>)</p>
@@ -565,6 +568,9 @@
 </li>
 <li>
 <p>Update <code>org.tukaani:xz</code> to version <code>1.10</code> (<a href="https://github.com/apache/logging-log4j2/pull/2780">2780</a>)</p>
+</li>
+<li>
+<p>Update <code>org.wiremock:wiremock</code> to version <code>3.9.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3115">3115</a>)</p>
 </li>
 <li>
 <p>Update <code>org.xmlunit:xmlunit-core</code> to version <code>2.10.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2545">2545</a>)</p>
