Add website content generated from `98d895d35b273c4037e5d99e120d8b8ed51c712c`

--- a/manual/configuration.html
+++ b/manual/configuration.html
@@ -3058,9 +3058,9 @@ The list of <code>XInclude</code> and <code>XPath</code> features supported depe
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-xml hljs" data-lang="xml">&lt;?xml version="1.0" encoding="UTF-8"?&gt;
 &lt;Loggers&gt;
-  &lt;Rogger name="org.example" level="DEBUG" additivity="false"&gt;
+  &lt;Logger name="org.example" level="DEBUG" additivity="false"&gt;
     &lt;AppenderRef ref="FILE" /&gt;
-  &lt;/Rogger&gt;
+  &lt;/Logger&gt;
   &lt;Root level="ERROR"&gt;
     &lt;AppenderRef ref="CONSOLE" /&gt;
   &lt;/Root&gt;
