--- a/download.html
+++ b/download.html
@@ -71,7 +71,7 @@
     <a class="nav-link" href="download.html">Download</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="release-notes.html">Release Notes</a>
+    <a class="nav-link" href="release-notes.html">Release notes</a>
   </li>
 </ul>
   </li>
@@ -370,7 +370,7 @@ Proceed to <a href="manual/installation.html" class="xref page">Installation</a>
 </li>
 <li>
 <p>Are you looking for the list of changes associated with a particular release?
-Proceed to <a href="release-notes.html" class="xref page">Release Notes</a>.</p>
+Proceed to <a href="release-notes.html" class="xref page">Release notes</a>.</p>
 </li>
 </ul>
 </div>
