Add website content generated from `328dd30bfba4665c42789e3984bd03c67b28cfa5`

--- a/release-notes.html
+++ b/release-notes.html
@@ -418,13 +418,16 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Rewrite <code>JAnsiTextRenderer</code> to work without JAnsi library. (<a href="https://github.com/apache/logging-log4j2/pull/2916">2916</a>)</p>
 </li>
 <li>
-<p>Change the whitespace prefixing logic in Pattern Layout (<a href="https://github.com/apache/logging-log4j2/pull/3045">3045</a>)</p>
+<p>Switch prefixing stack traces in Pattern Layout from whitespace to newline (<a href="https://github.com/apache/logging-log4j2/pull/3045">3045</a>)</p>
 </li>
 <li>
 <p>Changes the layout used by the <a href="https://logging.apache.org/log4j/2.x/manual/configuration.html#automatic-configuration">default configuration</a>. (<a href="https://github.com/apache/logging-log4j2/pull/3118">3118</a>)</p>
 </li>
 <li>
 <p>Switch to using Java&#8217;s <code>DateTimeFormatter</code> for date &amp; time formatting of log event instants (<a href="https://github.com/apache/logging-log4j2/pull/3121">3121</a>, <a href="https://github.com/apache/logging-log4j2/issues/2943">2943</a>)</p>
+</li>
+<li>
+<p>Switch prefixing stack traces in Status Logger from whitespace to newline (<a href="https://github.com/apache/logging-log4j2/pull/3149">3149</a>)</p>
 </li>
 </ul>
 </div>
