Add website content generated from `c662e6f415ca378f2dfffde6bcd56ace488a4252`

--- a/plugin-reference.html
+++ b/plugin-reference.html
@@ -23584,19 +23584,28 @@ toString(), or to output the value of a specific key within the property bundle 
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>capped</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>boolean?</code></p></td>
 <td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><div class="content"></div></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+<p>Sets whether the MongoDB collection is capped.</p>
+</div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>collectionSize</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>long?</code></p></td>
 <td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><div class="content"></div></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+<p>Sets the maximum size in bytes of a capped collection.</p>
+</div>
+<div class="paragraph">
+<p>Sets the maximum size in bytes of a capped collection.</p>
+</div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>connection</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>String</code></p></td>
 <td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><div class="content"></div></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+<p>Sets the MongoDB connection string.</p>
+</div></div></td>
 </tr>
 </tbody>
 </table>
