--- a/release-notes.html
+++ b/release-notes.html
@@ -429,6 +429,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <li>
 <p>Switch prefixing stack traces in Status Logger from whitespace to newline (<a href="https://github.com/apache/logging-log4j2/pull/3149">3149</a>)</p>
 </li>
+<li>
+<p>The MongoDb Appender shouldn&#8217;t log a deprecation warning, GitHub issue #3151. (<a href="https://github.com/apache/logging-log4j2/issues/3151">3149</a>)</p>
+</li>
 </ul>
 </div>
 </div>
