Add website content generated from `70f058daaa64379cb62e4bf473ed1fd3b66c31db`

--- a/manual/pattern-layout.html
+++ b/manual/pattern-layout.html
@@ -1416,7 +1416,7 @@ It features two modes:</p>
 </dd>
 <dt class="hdlist1"><code>short</code></dt>
 <dd>
-<p>Outputs the first line of the stack trace (analogous to <code>%ex{1}</code>)</p>
+<p>Outputs the first two lines of the stack trace (analogous to <code>%ex{2}</code>)</p>
 </dd>
 <dt class="hdlist1"><code>depth</code></dt>
 <dd>
