--- a/release-notes.html
+++ b/release-notes.html
@@ -371,8 +371,20 @@ See our <a href="graalvm.html" class="xref page">GraalVM guide</a> for details.<
 <div class="paragraph">
 <p>Exception handling in <a href="manual/pattern-layout.html" class="xref page">Pattern Layout</a> went through a major rewrite.
 This effectively helped with fixing some bugs by matching the feature parity of all exception converters.
-Additionally, rendered stack traces are ensured to be prefixed with a newline, which used to be a whitespace in earlier versions.
-The support for the <code>{ansi}</code> option in exception converters is removed too.</p>
+Some important highlights from this rewrite:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Rendered stack traces are ensured to be prefixed with a newline, which used to be a whitespace in earlier versions.</p>
+</li>
+<li>
+<p>Switched the default exception converter from <a href="manual/pattern-layout.html#converter-exception-extended" class="xref page">the extended exception converter</a> to <a href="manual/pattern-layout.html#converter-exception" class="xref page">the plain exception converter</a>, which is more performant.</p>
+</li>
+<li>
+<p>The support for the <code>{ansi}</code> option in exception converters is removed.</p>
+</li>
+</ul>
 </div>
 </div>
 <div class="sect2">
@@ -412,7 +424,7 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Remove JAnsi library support. Windows 10 console has supported ANSI escapes since 2017. (<a href="https://github.com/apache/logging-log4j2/issues/1736">1736</a>)</p>
 </li>
 <li>
-<p>Consolidate exception rendering logic and improve circular reference support in Pattern Layout (<a href="https://github.com/apache/logging-log4j2/pull/2691">2691</a>)</p>
+<p>Consolidate exception rendering logic and improve circular reference support in Pattern Layout (<a href="https://github.com/apache/logging-log4j2/pull/2691">2691</a>, <a href="https://github.com/apache/logging-log4j2/pull/3123">3123</a>)</p>
 </li>
 <li>
 <p>Rewrite <code>JAnsiTextRenderer</code> to work without JAnsi library. (<a href="https://github.com/apache/logging-log4j2/pull/2916">2916</a>)</p>
@@ -425,6 +437,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 </li>
 <li>
 <p>Switch to using Java&#8217;s <code>DateTimeFormatter</code> for date &amp; time formatting of log event instants (<a href="https://github.com/apache/logging-log4j2/pull/3121">3121</a>, <a href="https://github.com/apache/logging-log4j2/issues/2943">2943</a>)</p>
+</li>
+<li>
+<p>Switch the default exception converter from <a href="manual/pattern-layout.html#converter-exception-extended" class="xref page">the extended exception converter</a> to <a href="manual/pattern-layout.html#converter-exception" class="xref page">the plain exception converter</a> (<a href="https://github.com/apache/logging-log4j2/pull/3123">3123</a>)</p>
 </li>
 <li>
 <p>Switch prefixing stack traces in Status Logger from whitespace to newline (<a href="https://github.com/apache/logging-log4j2/pull/3149">3149</a>)</p>
@@ -440,7 +455,7 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <div class="ulist">
 <ul>
 <li>
-<p>Deprecate <code>ThrowableProxy</code> and all its usages (<a href="https://github.com/apache/logging-log4j2/pull/2691">2691</a>)</p>
+<p>Deprecate <code>ThrowableProxy</code> and all its usages (<a href="https://github.com/apache/logging-log4j2/pull/2691">2691</a>, <a href="https://github.com/apache/logging-log4j2/pull/3123">3123</a>)</p>
 </li>
 <li>
 <p>Deprecate <code>AbstractLogger.checkMessageFactory()</code>, since all created <code>Logger</code>s are already <code>MessageFactory</code>-namespaced (<a href="https://github.com/apache/logging-log4j2/pull/2936">2936</a>)</p>
