Add website content generated from `f592d2919bd52769846b582bf9aeb5e3e6e934f0`

--- a/release-notes.html
+++ b/release-notes.html
@@ -447,6 +447,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <li>
 <p>The MongoDb Appender shouldn&#8217;t log a deprecation warning, GitHub issue #3151. (<a href="https://github.com/apache/logging-log4j2/issues/3151">3149</a>)</p>
 </li>
+<li>
+<p>Add improved validation to StringMatchFilter for null/empty text. GitHub issue #3153. (<a href="https://github.com/apache/logging-log4j2/issues/3153">3153</a>)</p>
+</li>
 </ul>
 </div>
 </div>
