Add website content generated from `82c707ffd46857ec3e1288aad46ef2384328f38e`

--- a/release-notes.html
+++ b/release-notes.html
@@ -566,13 +566,16 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>org.apache.logging:logging-parent</code> to version <code>11.3.0</code></p>
 </li>
 <li>
-<p>Update <code>org.apache.maven.surefire:surefire-junit47</code> to version <code>3.5.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3062">3062</a>)</p>
+<p>Update <code>org.apache.maven.surefire:surefire-junit47</code> to version <code>3.5.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3162">3162</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.tomcat:tomcat-juli</code> to version <code>10.1.30</code> (<a href="https://github.com/apache/logging-log4j2/pull/2999">2999</a>)</p>
 </li>
 <li>
 <p>Update <code>org.eclipse.platform:org.eclipse.osgi</code> to version <code>3.21.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2940">2940</a>)</p>
+</li>
+<li>
+<p>Update <code>org.hsqldb:hsqldb</code> to version <code>2.7.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/3163">3163</a>)</p>
 </li>
 <li>
 <p>Update <code>org.junit:junit-bom</code> to version <code>5.11.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3111">3111</a>)</p>
