Add website content generated from `1a21ed8bc872b20df491414673cef8e5b1fd1821`

--- a/release-notes.html
+++ b/release-notes.html
@@ -442,6 +442,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Switch the default exception converter from <a href="manual/pattern-layout.html#converter-exception-extended" class="xref page">the extended exception converter</a> to <a href="manual/pattern-layout.html#converter-exception" class="xref page">the plain exception converter</a> (<a href="https://github.com/apache/logging-log4j2/pull/3123">3123</a>)</p>
 </li>
 <li>
+<p>Don&#8217;t close StringReaders because of batching. (<a href="https://github.com/apache/logging-log4j2/issues/3127">3127</a>)</p>
+</li>
+<li>
 <p>Switch prefixing stack traces in Status Logger from whitespace to newline (<a href="https://github.com/apache/logging-log4j2/pull/3149">3149</a>)</p>
 </li>
 <li>
