--- a/plugin-reference.html
+++ b/plugin-reference.html
@@ -2667,12 +2667,7 @@ This attribute is ignored if <code>immediateFlush</code> is set to <code>true</c
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>Property</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code><a href="#org-apache-logging-log4j_log4j-core_org-apache-logging-log4j-core-config-Property">Property</a>?</code></p></td>
-<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p>A generic list of key/value properties</p>
-</div>
-<div class="paragraph">
-<p>The meaning of these properties depends on the component.</p>
-</div></div></td>
+<td class="tableblock halign-left valign-top"><div class="content"></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"></td>
@@ -10798,11 +10793,13 @@ DENY.</p>
 </dl>
 </div>
 <div class="paragraph">
-<p>This filter returns the onMatch result if the level in the LogEvent is the same or more specific than the configured level and the onMismatch value otherwise.</p>
+<p>This filter returns the onMatch result if the level in the <code>org.apache.logging.log4j.core.LogEvent</code> is the same or more specific than the configured level and the <code>onMismatch</code> value otherwise.</p>
 </div>
 <div class="paragraph">
-<p>For example, if the ThresholdFilter is configured with Level ERROR and the LogEvent contains Level DEBUG then the onMismatch value will be returned since ERROR events are more specific than DEBUG.
-The default Level is ERROR.</p>
+<p>For example, if the ThresholdFilter is configured with Level <code>ERROR</code> and the LogEvent contains Level <code>DEBUG</code> then the <code>onMismatch</code> value will be returned since <code>ERROR</code> events are more specific than <code>DEBUG</code>.</p>
+</div>
+<div class="paragraph">
+<p>The default Level is <code>ERROR</code>.</p>
 </div>
 <div class="sect4">
 <h5 id="org-apache-logging-log4j_log4j-core_org-apache-logging-log4j-core-filter-ThresholdFilter_XML-snippet"><a class="anchor" href="#org-apache-logging-log4j_log4j-core_org-apache-logging-log4j-core-filter-ThresholdFilter_XML-snippet"></a>XML snippet</h5>
