--- a/release-notes.html
+++ b/release-notes.html
@@ -374,6 +374,9 @@
 <p>Remove <code>ThrowableProxy</code> and its usages (<a href="https://github.com/apache/logging-log4j2/pull/3047">3047</a>)</p>
 </li>
 <li>
+<p>Remove logging bridges from distribution and reference their 2.x equivalents in <code>log4j-bom</code>.</p>
+</li>
+<li>
 <p>Remove CLI tools to generate logger wrappers and convert configuration files. These tools will be available in the next release of <a href="https://logging.apache.org/log4j/transform/latest/">Log4j Transform</a>.</p>
 </li>
 <li>
