--- a/download.html
+++ b/download.html
@@ -71,7 +71,7 @@
     <a class="nav-link" href="download.html">Download</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="release-notes.html">Release Notes</a>
+    <a class="nav-link" href="release-notes.html">Release notes</a>
   </li>
 </ul>
   </li>
@@ -310,7 +310,7 @@
 <p>Are you looking for <strong>the Log4j installation instructions</strong>? Proceed to <a href="manual/installation.html" class="xref page">Installation</a>.</p>
 </li>
 <li>
-<p>Are you looking for the list of changes associated with a particular release? Proceed to <a href="release-notes.html" class="xref page">Release Notes</a>.</p>
+<p>Are you looking for the list of changes associated with a particular release? Proceed to <a href="release-notes.html" class="xref page">Release notes</a>.</p>
 </li>
 </ul>
 </div>
