Add website content generated from `f1c900260eeb023257ddcb4390400756d70fa041`

--- a/manual/appenders/delegating.html
+++ b/manual/appenders/delegating.html
@@ -755,19 +755,11 @@ implementation of <code>BlockingQueue</code>.</p>
 <dt class="hdlist1"><code>JCToolsBlockingQueue</code></dt>
 <dd>
 <div class="paragraph">
-<p>+
-This queue factory uses
+<p>This queue factory uses
 <a href="https://jctools.github.io/JCTools/">JCTools</a>, specifically the MPSC bounded lock-free queue.</p>
 </div>
-<div class="paragraph">
-<p>+
-.Additional dependencies are required to use <code>JCToolsBlockingQueue</code></p>
-</div>
-</dd>
-</dl>
-</div>
 <details>
-<summary class="title">Details</summary>
+<summary class="title">Additional dependencies are required to use <code>JCToolsBlockingQueue</code></summary>
 <div class="content">
 <div id="_tabs_3" class="openblock tabs is-sync is-loading">
 <div class="content">
@@ -809,6 +801,9 @@ This queue factory uses
 </div>
 </div>
 </details>
+</dd>
+</dl>
+</div>
 <div class="paragraph">
 <p><a href="../../plugin-reference.html#org-apache-logging-log4j_log4j-core_org-apache-logging-log4j-core-async-JCToolsBlockingQueueFactory" class="xref page">&#x1F4D6; Plugin reference for <code>JCToolsBlockingQueue</code></a></p>
 </div>
