--- a/download.html
+++ b/download.html
@@ -304,15 +304,143 @@
 <div class="paragraph">
 <p>You can manually download all published Log4j distributions, verify them, and see their licensing information by following the instructions in <a href="https://logging.apache.org/download.html">the Download page</a> of <a href="https://logging.apache.org">Logging Services</a>.</p>
 </div>
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-tip" title="Tip"></i>
+</td>
+<td class="content">
 <div class="ulist">
 <ul>
 <li>
-<p>Are you looking for <strong>the Log4j installation instructions</strong>? Proceed to <a href="manual/installation.html" class="xref page">Installation</a>.</p>
+<p>Are you looking for <strong>the Log4j installation instructions</strong>?
+Proceed to <a href="manual/installation.html" class="xref page">Installation</a>.</p>
 </li>
 <li>
-<p>Are you looking for the list of changes associated with a particular release? Proceed to <a href="release-notes.html" class="xref page">Release notes</a>.</p>
+<p>Are you looking for the list of changes associated with a particular release?
+Proceed to <a href="release-notes.html" class="xref page">Release notes</a>.</p>
 </li>
 </ul>
+</div>
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="source-distribution"><a class="anchor" href="#source-distribution"></a>Source distribution</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>You can download the source code of the latest Log4j release using the links below:</p>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<caption class="title">Table 1. Source distribution files</caption>
+<colgroup>
+<col style="width: 28.5714%;">
+<col style="width: 71.4286%;">
+</colgroup>
+<tbody>
+<tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock">Sources</p></th>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://downloads.apache.org/logging/log4j/3.0.0-beta2/apache-log4j-3.0.0-beta2-src.zip">apache-log4j-3.0.0-beta2-src.zip</a></p></td>
+</tr>
+<tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock">Checksum</p></th>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://downloads.apache.org/logging/log4j/3.0.0-beta2/apache-log4j-3.0.0-beta2-src.zip.sha512">apache-log4j-3.0.0-beta2-src.zip.sha512</a></p></td>
+</tr>
+<tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock">Signature</p></th>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://downloads.apache.org/logging/log4j/3.0.0-beta2/apache-log4j-3.0.0-beta2-src.zip.asc">apache-log4j-3.0.0-beta2-src.zip.asc</a></p></td>
+</tr>
+<tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock">Signing keys</p></th>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://downloads.apache.org/logging/KEYS">KEYS</a></p></td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+<div class="sect1">
+<h2 id="binary-distribution"><a class="anchor" href="#binary-distribution"></a>Binary distribution</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>A set of binaries of Log4j is available through two main distribution channels:</p>
+</div>
+<div class="dlist">
+<dl>
+<dt class="hdlist1">ASF Nexus Repository</dt>
+<dd>
+<div class="paragraph">
+<p>All the binary artifacts are available on the Apache Software Foundation
+<a href="https://repository.apache.org/content/repositories/releases/"><code>repository.apache.org</code> Nexus repository</a>.
+Its content is mirrored to the
+<a href="https://repo.maven.apache.org/maven2/">Maven Central repository</a>.</p>
+</div>
+<div class="paragraph">
+<p>See <a href="components.html" class="xref page">Components</a> for more information on the GAV coordinates of the artifacts.</p>
+</div>
+</dd>
+<dt class="hdlist1">Binary distribution archive</dt>
+<dd>
+<div class="paragraph">
+<p>All the artifacts in the ASF Nexus repository are also available in a single ZIP archive:</p>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<caption class="title">Table 2. Binary distribution files</caption>
+<colgroup>
+<col style="width: 28.5714%;">
+<col style="width: 71.4286%;">
+</colgroup>
+<tbody>
+<tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock">Binaries</p></th>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://downloads.apache.org/logging/log4j/3.0.0-beta2/apache-log4j-3.0.0-beta2-bin.zip">apache-log4j-3.0.0-beta2-bin.zip</a></p></td>
+</tr>
+<tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock">Checksum</p></th>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://downloads.apache.org/logging/log4j/3.0.0-beta2/apache-log4j-3.0.0-beta2-bin.zip.sha512">apache-log4j-3.0.0-beta2-bin.zip.sha512</a></p></td>
+</tr>
+<tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock">Signature</p></th>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://downloads.apache.org/logging/log4j/3.0.0-beta2/apache-log4j-3.0.0-beta2-bin.zip.asc">apache-log4j-3.0.0-beta2-bin.zip.asc</a></p></td>
+</tr>
+<tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock">Signing keys</p></th>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://downloads.apache.org/logging/KEYS">KEYS</a></p></td>
+</tr>
+</tbody>
+</table>
+</dd>
+</dl>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>The authenticity of the Log4j binary release is independently verified by the
+<a href="https://github.com/jvm-repo-rebuild/reproducible-central">Reproducible Builds for Maven Central Repository</a>
+project.
+You can check the reproducibility status of the artifacts on their
+<a href="https://github.com/jvm-repo-rebuild/reproducible-central/blob/master/content/org/apache/logging/log4j/log4j/README.md"><code>org.apache.logging.log4j:log4j</code> RB check</a> page.</p>
+</div>
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="sbom"><a class="anchor" href="#sbom"></a>Software Bill of Materials (SBOM)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Each Log4j artifact is accompanied by a Software Bill of Materials (SBOM).
+See <a href="https://logging.apache.org/download.html#sbom">the Download page of Logging Services page</a> for details.</p>
 </div>
 </div>
 </div>
@@ -321,21 +449,21 @@
 <div class="sectionbody">
 <div class="paragraph">
 <p>Are you looking for old versions of Log4j?
-While we recommend to always use the latest version, you can find the older versions here:</p>
+While we recommend always using the latest version, you can find the older versions here:</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://logging.apache.org/1.x/">Log4j 1.x (End of Life, Java 1.4)</a></p>
+<p><a href="https://logging.apache.org/1.x/index.html">Log4j 1.x (End of Life, Java 1.4)</a></p>
 </li>
 <li>
-<p><a href="https://logging.apache.org/2.3.x/">Log4j 2.3.x (Java 6)</a></p>
+<p><a href="https://logging.apache.org/2.3.x/index.html">Log4j 2.3.x (End of Life, Java 6)</a></p>
 </li>
 <li>
-<p><a href="https://logging.apache.org/2.12.x/">Log4j 2.12.x (Java 7)</a></p>
+<p><a href="https://logging.apache.org/2.12.x/index.html">Log4j 2.12.x (End of Life, Java 7)</a></p>
 </li>
 <li>
-<p><a href="https://logging.apache.org/2.x/">Log4j 2.x (Java 8)</a></p>
+<p><a href="https://logging.apache.org/2.x/index.html">Log4j 2.x (Java 8)</a></p>
 </li>
 </ul>
 </div>
